Prepare Bhulan public demo launch
